add identifier to Orgs

--- a/sample-viewer/src/app/admin/citation/citation.component.html
+++ b/sample-viewer/src/app/admin/citation/citation.component.html
@@ -48,7 +48,7 @@
 <ng-template #source_citation let-source="source" let-url="url">
   <div [ngSwitch]="source['@type']" class="source">
     <app-format-citation [citations]="[source]" class="citation-group" *ngSwitchCase="'ScholarlyArticle'" verbosity="simple"></app-format-citation>
-    <app-format-publisher [publisher]="source" [source_url]="url" verbosity="full" class="publisher-group" *ngSwitchCase="'Publisher'"></app-format-publisher>
+    <app-format-publisher [publisher]="source" [source_url]="url" verbosity="full" class="publisher-group" *ngSwitchCase="'Organization'"></app-format-publisher>
     <app-format-publisher [publisher]="source" [source_url]="url" verbosity="full" class="unknown-group" *ngSwitchCase="'unknown'"></app-format-publisher>
     <app-format-publisher [publisher]="source" [source_url]="url" verbosity="full" class="unknown-group" *ngSwithDefault></app-format-publisher>
   </div>
