--- a/sample-viewer/src/app/header/header.component.scss
+++ b/sample-viewer/src/app/header/header.component.scss
@@ -15,13 +15,13 @@
 }
 
 .authorized.dev {
-  background: linear-gradient(45deg, #8c77bb5c, transparent);
-  background: #8c77bb3c;
+  // background: linear-gradient(45deg, #8c77bb5c, transparent);
+  background: #e8e4f1;
 }
 
 .authorized.prod {
-  background: linear-gradient(270deg, #62c0e25c, transparent);
-  background: #62c0e22e;
+  // background: linear-gradient(270deg, #62c0e25c, transparent);
+  background: #e3f4fa;
 }
 
 .authorized-warning,
@@ -80,7 +80,7 @@ img {
     img {
       margin: 0;
       height: 32px;
-      border-left: 1px solid $grey-250;
+      border-left: 1px solid $cvisb-theme;
       // border-left: 1px solid accent(50);
       padding: 3px 10px 3px 23px;
     }
