fix datasetID call, cleanup consoles, outdated code

--- a/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
@@ -9,7 +9,7 @@
   <div class="helper-text">
     <!-- <i class="fas fa-arrow-down"></i>  -->
     <i class="fas fa-level-up-alt helper-arrow"></i>
-    <span class="text">percent of experiments from source</span>
+    <span class="text">percent of experiments cited in source</span>
   </div>
 
 
