test: ngIf --> hidden for elementref not def in prod build (?)

--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -3,7 +3,7 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <table mat-table [dataSource]="patientSource" matSort id="patients" *ngIf="patientSource">
+  <table mat-table [dataSource]="patientSource" matSort id="patients" [hidden]="!patientSource">
 
     <!-- ID Column -->
     <ng-container matColumnDef="patientID">
