--- a/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.scss
@@ -27,7 +27,7 @@
   margin: -3px -80px 0 -25px;
   font-size: 0.95em;
   padding-left: 25px;
-  border-top: 2px solid white;
+  // border-top: 2px solid white;
 }
 
 td.icon {
