minor css update

--- a/sample-viewer/src/app/header/header.component.scss
+++ b/sample-viewer/src/app/header/header.component.scss
@@ -51,7 +51,7 @@
 .dev-warning-banner {
   justify-content: center;
   padding: 5px 10px;
-  border-top: 2px solid white;
+  // border-top: 2px solid white;
   background: accent-redder(A400);
   color: white;
   text-transform: none;
