cull unneeded mat themes

--- a/sample-viewer/src/sass/_material-theme.scss
+++ b/sample-viewer/src/sass/_material-theme.scss
@@ -150,7 +150,24 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($candy-app-theme);
-
+// @include angular-material-theme($candy-app-theme);
+@include mat-core-theme($candy-app-theme);
+@include mat-button-theme($candy-app-theme);
+@include mat-chips-theme($candy-app-theme);
+@include mat-table-theme($candy-app-theme);
+@include mat-dialog-theme($candy-app-theme);
+@include mat-expansion-panel-theme($candy-app-theme);
+@include mat-form-field-theme($candy-app-theme);
+@include mat-icon-theme($candy-app-theme);
+@include mat-input-theme($candy-app-theme);
+@include mat-paginator-theme($candy-app-theme);
+@include mat-progress-bar-theme($candy-app-theme);
+@include mat-progress-spinner-theme($candy-app-theme);
+@include mat-radio-theme($candy-app-theme);
+@include mat-select-theme($candy-app-theme);
+@include mat-stepper-theme($candy-app-theme);
+@include mat-sort-theme($candy-app-theme);
+@include mat-tooltip-theme($candy-app-theme);
+@include mat-snack-bar-theme($candy-app-theme);
 @include mat-checkbox-theme(mat-light-theme(mat-palette($mat-grey), $candy-app-primary, $candy-app-warn));
 // @include mat-checkbox-theme(mat-light-theme(mat-palette($mat-grey), $candy-app-primary, mat-palette($mat-pink)));
