--- a/sample-viewer/src/app/admin/citation/citation.component.html
+++ b/sample-viewer/src/app/admin/citation/citation.component.html
@@ -18,7 +18,7 @@
   <section id="individual-sources">
     <h3>Citing individual data sources</h3>
     <p class="helper-text">
-      The data in the CViSB Data Portal is a mixture of data collected by our consortium, data contributed by our partners, and publicly available data on Lassa Fever and Ebola. Some of the data has been published and others are works in
+      The data in the CViSB Data Portal is a mixture of data collected by our consortium, data contributed by our partners, and publicly available data on Lassa and Ebola. Some of the data has been published and others are works in
       progress. Individual data sources can be cited as:
     </p>
 
