Switch "viral seq" to "virus seq"

--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -39,8 +39,8 @@
 
       </div>
 
-      <app-curated-alignments includedInDataset="lassa-viral-seq" *ngIf="dataset.identifier === 'lassa-viral-seq'"></app-curated-alignments>
-      <app-curated-alignments includedInDataset="ebola-viral-seq" *ngIf="dataset.identifier === 'ebola-viral-seq'"></app-curated-alignments>
+      <app-curated-alignments includedInDataset="lassa-virus-seq" *ngIf="dataset.identifier === 'lassa-virus-seq'"></app-curated-alignments>
+      <app-curated-alignments includedInDataset="ebola-virus-seq" *ngIf="dataset.identifier === 'ebola-virus-seq'"></app-curated-alignments>
 
       <app-dataset-source [sources]="dataset.source"></app-dataset-source>
 
