--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -654,9 +654,9 @@ button.stepper-button {
   background: #ffe7c7;
 }
 
-.ebola-viral-seq,
-.lassa-viral-seq,
-.viral-seq {
+.ebola-virus-seq,
+.lassa-virus-seq,
+.virus-seq {
   background: #e4fffc;
 }
 
