--- a/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.html
+++ b/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.html
@@ -1,7 +1,7 @@
 <div class="curation-explanation" id="alignments" *ngIf="curated && curated.length > 0">
   <h3>Curated alignments</h3>
   <p>
-    Our viral sequencing datasets combine genomic sequences generated as part of our consortium with publicly available sequences. In addition to providing the raw data, we also curate sequences and provide the alignments to the
+    Our virus sequencing datasets combine genomic sequences generated as part of our consortium with publicly available sequences. In addition to providing the raw data, we also curate sequences and provide the alignments to the
     broader community for downstream analyses.
   </p>
 
