--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -106,8 +106,8 @@
             </mat-expansion-panel-header>
             <ng-container [ngSwitch]="expt.dataset_id">
               <app-patient-hla *ngSwitchCase="'hla'" [data]="getExpt(expt.dataset_id)" [patientID]="patient.patientID"></app-patient-hla>
-              <app-patient-viral-seq *ngSwitchCase="'ebola-viral-seq'" [sequences]="getExpt(expt.dataset_id)" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
-              <app-patient-viral-seq *ngSwitchCase="'lassa-viral-seq'" [sequences]="getExpt(expt.dataset_id)" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
+              <app-patient-viral-seq *ngSwitchCase="'ebola-virus-seq'" [sequences]="getExpt(expt.dataset_id)" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
+              <app-patient-viral-seq *ngSwitchCase="'lassa-virus-seq'" [sequences]="getExpt(expt.dataset_id)" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
               <app-patient-serology *ngSwitchCase="'systems-serology'" [data]="getExpt(expt.dataset_id)" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-serology>
             </ng-container>
           </mat-expansion-panel>
