add in data terms

--- a/sample-viewer/src/app/_dialogs/spinner-popup/spinner-popup.component.html
+++ b/sample-viewer/src/app/_dialogs/spinner-popup/spinner-popup.component.html
@@ -1,4 +1,12 @@
-<div class="spinner-container container" style="justify-content: space-around;">
+<div class="spinner-group container" style="justify-content: space-around;">
   <h2>{{ data }}</h2>
   <mat-spinner></mat-spinner>
+
+  <section class="be-good">
+    <div class="reminder">
+      While you're waiting... remember to abide by our data terms of use:
+    </div>
+
+    <app-data-terms></app-data-terms>
+  </section>
 </div>
