--- a/sample-viewer/src/app/admin/terms/terms.component.html
+++ b/sample-viewer/src/app/admin/terms/terms.component.html
@@ -1,4 +1,19 @@
 <div class="centered">
+  <div class="be-good">
+    <div class="container be-good-header">
+      <h1>How to use our data</h1>
+      <div class="source-icon container cvisb-data">
+        <svg-icon icon="cvisb" class="cvisb-icon"></svg-icon>
+        <span class="source-tag">data</span>
+      </div>
+    </div>
+    <div class="data-use">
+      By using our data, you agree to the following terms:
+    </div>
+
+    <app-data-terms></app-data-terms>
+  </div>
+
   <h3>Disclaimer</h3>
   <app-disclaimer></app-disclaimer>
 
@@ -72,7 +87,5 @@
       BY USING THIS SITE, YOU ACKNOWLEDGE AND AGREE THAT YOU HAVE READ, UNDERSTOOD AND AGREE TO ALL OF THESE TERMS OF USE.
     </p>
   </section>
-
-  <app-privacy></app-privacy>
 
 </div>
