standardize dataset_name --> datasetName

--- a/sample-viewer/src/app/admin/citation/citation.component.html
+++ b/sample-viewer/src/app/admin/citation/citation.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="citation-group" *ngFor="let expt of experiments">
-      <h4 class="data-type"><a [routerLink]="['/dataset', expt.term]">{{expt.dataset_name}} data</a></h4>
+      <h4 class="data-type"><a [routerLink]="['/dataset', expt.term]">{{expt.datasetName}} data</a></h4>
       <div class="data-source-group">
         <ng-container *ngFor="let source of expt.sources">
           <ng-container [ngTemplateOutlet]="source_citation" [ngTemplateOutletContext]="{ source: source.source, url: host_url + '/dataset/' + expt.term }">
