--- a/sample-viewer/src/app/_dialogs/terms-popup/terms-popup.component.html
+++ b/sample-viewer/src/app/_dialogs/terms-popup/terms-popup.component.html
@@ -1,6 +1,6 @@
 <div class="data-terms">
   <h3 class="data-use">
-    By using our data, you agree to the following terms:
+    By using CViSB data, you agree to the following terms:
   </h3>
 
   <mat-dialog-content>
