removing non-schema.org properties from embedded metadata

--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -57,5 +57,5 @@
 
     </div>
   </div>
-  <span *ngIf="dataset"><span *embedJsonld="dataset"></span></span>
+  <span *ngIf="datasetSchema"><span *embedJsonld="datasetSchema"></span></span>
 </div>
