--- a/sample-viewer/src/app/admin/citation/citation.component.html
+++ b/sample-viewer/src/app/admin/citation/citation.component.html
@@ -1,4 +1,4 @@
-<div class="spinner-container container" *ngIf="loading">
+<div class="spinner-container container" *ngIf="loading$ | async">
   <mat-spinner></mat-spinner>
 </div>
 
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="citation-group" *ngFor="let expt of experiments">
+    <div class="citation-group" *ngFor="let expt of experiments$ | async">
       <h4 class="data-type"><a [routerLink]="['/dataset', expt.term]">{{expt.datasetName}} data</a></h4>
       <div class="data-source-group">
         <ng-container *ngFor="let source of expt.sources">
