--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -18,12 +18,12 @@
   </div>
 
   <ng-container *ngIf="authorized$ | async as authorizedObj">
-  <div id="S-G-ids" class="container-column" *ngIf="authorizedObj.authorized">
-    <mat-checkbox class="include-sid" [(ngModel)]="inclSID" (ngModelChange)="filterID($event, 'sID')">has S- or C-id</mat-checkbox>
+    <!-- <div id="S-G-ids" class="container-column" *ngIf="authorizedObj.authorized"> -->
+      <mat-checkbox class="include-sid" [(ngModel)]="inclSID" (ngModelChange)="filterID($event, 'sID')">has S- or C-id</mat-checkbox>
 
-    <mat-checkbox class="include-gid" [(ngModel)]="inclGID" (ngModelChange)="filterID($event, 'gID')">has G-id</mat-checkbox>
+      <mat-checkbox class="include-gid" [(ngModel)]="inclGID" (ngModelChange)="filterID($event, 'gID')">has G-id</mat-checkbox>
 
-  </div>
-</ng-container>
+    <!-- </div> -->
+  </ng-container>
 
 </div>
