properly size images

--- a/sample-viewer/src/app/footer/footer.component.html
+++ b/sample-viewer/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
           <img src="/assets/img/cvisb_icon_300px.png" class="logo" />
         </a>
 
-          <img src="/assets/img/kgh_400x110.png" class="logo" />
+          <img src="/assets/img/kgh_logo.png" class="logo" />
 
         <a href="http://health.gov.sl/" rel="noreferrer" target="_blank">
           <img src="/assets/img/SL_MOH.png" class="logo" />
