--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -62,7 +62,7 @@
                 {{expt.count}}
               </div>
               <div class="count-label">
-                {{expt.dataset_name}} experiments
+                {{expt.datasetName}} experiments
               </div>
             </div>
           </a>
@@ -163,7 +163,7 @@
       </div>
       <div class="description">
         The majority of our data is provided to CViSB through a partnership with the Kenema Government hospital (KGH) in Sierra Leone.
-        KGH is home to Sierra Leone's only Lassa fever isolation ward, which was also used during the 2014-2016 West African Ebola outbreak to treat Ebola.
+        KGH is home to Sierra Leone's only Lassa isolation ward, which was also used during the 2014-2016 West African Ebola outbreak to treat Ebola.
         We have also analyzed samples from our partners in Nigeria at the Irrua Specialist Teaching Hospital and have curated publically available data on patients in Liberia, Guinea, and other countries.
       </div>
     </div>
