--- a/sample-viewer/src/app/home/home.component.scss
+++ b/sample-viewer/src/app/home/home.component.scss
@@ -47,7 +47,7 @@ a {
 }
 
 .intro {
-  background-image: url("../../assets/img/KGH_1600x630px.png");
+  background-image: url("../../assets/img/KGH_image_1600px.jpg");
   height: 500px;
   padding: 25px;
   background-size: cover;
