--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="filter-item filter-ctry">
-          <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="allPatientSummary.experiments"></app-filter-location>
+          <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="allPatientSummary.patientCountries"></app-filter-location>
         </div>
 
         <!-- <div class="filter-item filter-timepoints">
