switch to font-awesome module rather than direct import

--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -40,7 +40,7 @@
     <div class="container-column link-container" id="dataset">
       <div class="data section-link">
         <a routerLink="/dataset">
-          <i class="section-icon fas fa-table"></i>
+          <fa-icon class="section-icon fas fa-table" [icon]="faTable"></fa-icon>
 
           <div class="section-title">
             Data
@@ -73,7 +73,7 @@
     <div class="container-column link-container" id="patient">
       <div class="patient section-link">
         <a routerLink="/patient">
-          <i class="section-icon fas fa-users"></i>
+          <fa-icon class="section-icon fas fa-users" [icon]="faUsers"></fa-icon>
 
           <div class="section-title">
             Patients
@@ -119,7 +119,7 @@
     <div class="container-column  link-container" id="sample">
       <div class="samples section-link">
         <a routerLink="/sample">
-          <i class="section-icon fas fa-dna"></i>
+          <fa-icon class="section-icon fas fa-dna" [icon]="faDna"></fa-icon>
           <div class="section-title">
             Samples
           </div>
