--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -83,7 +83,7 @@
             <fa-icon [icon]="faVenus"></fa-icon>
           </span>
           <span *ngIf="element.gender === 'Male'">
-            <fa-icon [icon]="faMars"></fa-icon></i>
+            <fa-icon [icon]="faMars"></fa-icon>
           </span>
         </span>
 
