streamlining /patient requests for patient, sample, expt data

--- a/sample-viewer/src/app/patient/patient.component.html
+++ b/sample-viewer/src/app/patient/patient.component.html
@@ -4,7 +4,7 @@
     <app-download-btn filetype="patients" buttonLabel="patients"></app-download-btn>
   </div>
 
-  <app-filter-patients></app-filter-patients>
+  <!-- <app-filter-patients></app-filter-patients> -->
 
   <app-patient-table></app-patient-table>
 </ng-container>
