--- a/sample-viewer/src/app/patient-timepoints/patient-timepoints.component.html
+++ b/sample-viewer/src/app/patient-timepoints/patient-timepoints.component.html
@@ -1,4 +1,4 @@
-  <div class="container sample-timepoints" *ngIf="samples.length > 0; else no_data">
+  <div class="container sample-timepoints" *ngIf="samples && samples.length > 0; else no_data">
     <div class="sample" *ngFor="let sample of samples" [matTooltip]="sample.sampleType + ' sample at ' + sample.sampleGroup + ' timepoint ' + sample.visitCode" (click)="showSampleMD($event, sample)">
       <span class="sample-type">{{ sample.sampleType }}</span> -
       <span class="sample-timepoint">
