--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -37,7 +37,7 @@
     <ng-container matColumnDef="associatedSamples">
       <th mat-header-cell *matHeaderCellDef>samples</th>
       <td mat-cell *matCellDef="let element">
-        <app-patient-timepoints [alternateIDs]="element.alternateIdentifier"></app-patient-timepoints>
+        <app-patient-timepoints [samples]="element.samples"></app-patient-timepoints>
         <!-- <app-patient-timepoints [samples]="element.associatedSamples"></app-patient-timepoints> -->
         <!-- <mat-chip-list> -->
         <!-- <mat-chip class="timepoint" *ngFor="let timepoint of element.associatedSamples" [ngClass]="element.outcome"> -->
