--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -1,4 +1,5 @@
-  <ng-container *ngIf='patientSummary$ | async as patientSummary'>
+  <ng-container *ngIf='patientSummary'>
+  <!-- <ng-container *ngIf='patientSummary$ | async as patientSummary'> -->
     <mat-expansion-panel [expanded]="panelOpenState" (opened)="panelOpenState = true" (closed)="panelOpenState = false" class="filter-expansion-panel">
       <mat-expansion-panel-header>
         <mat-panel-title>
