--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="allPatientSummary">
   <ng-container *ngIf='patientSummary$ | async as patientSummary'>
     <mat-expansion-panel [expanded]="panelOpenState" (opened)="panelOpenState = true" (closed)="panelOpenState = false" class="filter-expansion-panel">
       <mat-expansion-panel-header>
@@ -53,3 +54,4 @@
     </mat-expansion-panel>
 
   </ng-container>
+</ng-container>
